// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 294,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 224,
  },
  "fats": Weight {
    "amount": 63,
  },
  "proteins": Weight {
    "amount": 154,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 77,
  },
  "proteins": Weight {
    "amount": 98,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 98,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 273,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 196,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 210,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 210,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 140,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 84,
  },
  "proteins": Weight {
    "amount": 154,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 63,
  },
  "proteins": Weight {
    "amount": 175,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 70 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 77,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 336,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 256,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 176,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 88,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 312,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 224,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 240,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 240,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 160,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 360,
  },
  "fats": Weight {
    "amount": 96,
  },
  "proteins": Weight {
    "amount": 176,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 80 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 320,
  },
  "fats": Weight {
    "amount": 88,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 378,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 180,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 288,
  },
  "fats": Weight {
    "amount": 81,
  },
  "proteins": Weight {
    "amount": 198.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 99.00000000000001,
  },
  "proteins": Weight {
    "amount": 125.99999999999999,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 125.99999999999999,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 351,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 251.99999999999997,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 180,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 270,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 270,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 180,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 405,
  },
  "fats": Weight {
    "amount": 108,
  },
  "proteins": Weight {
    "amount": 198.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 81,
  },
  "proteins": Weight {
    "amount": 225,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 90 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 360,
  },
  "fats": Weight {
    "amount": 99.00000000000001,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 420,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 320,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 220.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 110.00000000000001,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 390,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 300,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 300,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 450,
  },
  "fats": Weight {
    "amount": 120,
  },
  "proteins": Weight {
    "amount": 220.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 250,
  },
}
`;

exports[`MacronutrientsCalculator > macros(FEMALE 100 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 400,
  },
  "fats": Weight {
    "amount": 110.00000000000001,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 294,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 224,
  },
  "fats": Weight {
    "amount": 49,
  },
  "proteins": Weight {
    "amount": 154,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 98,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 49,
  },
  "proteins": Weight {
    "amount": 98,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 42,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 273,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 196,
  },
  "fats": Weight {
    "amount": 42,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 210,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 210,
  },
  "fats": Weight {
    "amount": 49,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 140,
  },
  "fats": Weight {
    "amount": 42,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 175,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 84,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 154,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 245,
  },
  "fats": Weight {
    "amount": 49,
  },
  "proteins": Weight {
    "amount": 175,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 70 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 336,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 256,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 176,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 112,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 48,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 312,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 224,
  },
  "fats": Weight {
    "amount": 48,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 240,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 240,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 160,
  },
  "fats": Weight {
    "amount": 48,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 64,
  },
  "proteins": Weight {
    "amount": 96,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 360,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 176,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 56,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 80 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 320,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 128,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 378,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 180,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 288,
  },
  "fats": Weight {
    "amount": 62.99999999999999,
  },
  "proteins": Weight {
    "amount": 198.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 125.99999999999999,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 62.99999999999999,
  },
  "proteins": Weight {
    "amount": 125.99999999999999,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 54,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 351,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 251.99999999999997,
  },
  "fats": Weight {
    "amount": 54,
  },
  "proteins": Weight {
    "amount": 180,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 270,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 270,
  },
  "fats": Weight {
    "amount": 62.99999999999999,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 180,
  },
  "fats": Weight {
    "amount": 54,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 225,
  },
  "fats": Weight {
    "amount": 72,
  },
  "proteins": Weight {
    "amount": 108,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 405,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 198.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 315,
  },
  "fats": Weight {
    "amount": 62.99999999999999,
  },
  "proteins": Weight {
    "amount": 225,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 90 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 360,
  },
  "fats": Weight {
    "amount": 90,
  },
  "proteins": Weight {
    "amount": 144,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 420,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 320,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 220.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 140,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 60,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 LIGHT MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 390,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 280,
  },
  "fats": Weight {
    "amount": 60,
  },
  "proteins": Weight {
    "amount": 200,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 MODERATE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 300,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 300,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 200,
  },
  "fats": Weight {
    "amount": 60,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 SEDENTARY MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 250,
  },
  "fats": Weight {
    "amount": 80,
  },
  "proteins": Weight {
    "amount": 120,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE GAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 450,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 220.00000000000003,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE LOST) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 350,
  },
  "fats": Weight {
    "amount": 70,
  },
  "proteins": Weight {
    "amount": 250,
  },
}
`;

exports[`MacronutrientsCalculator > macros(MALE 100 VERY_INTENSE MAINTAIN) 1`] = `
Macros {
  "carbs": Weight {
    "amount": 400,
  },
  "fats": Weight {
    "amount": 100,
  },
  "proteins": Weight {
    "amount": 160,
  },
}
`;
